# tmva-to-xgboost

./: README.md  tmva2xgboost.cpp
test/: CMakeLists.txt  compile_gbrforest.sh  gbrforest.patch  run_electron_mva_test.sh  run_gbr_comparison.py  test_electronid_gbrforest.py  test_photonid_tmva.py
